--- a/_notebooks/2025-11-5-tri1_retrospective.ipynb
+++ b/_notebooks/2025-11-5-tri1_retrospective.ipynb
@@ -47,12 +47,12 @@
    "source": [
     "## Key Gains from Sprints\n",
     "\n",
-    "| Skill / Concept | Description | Future Focus |\n",
+    "| Skill / Concept | Description | Example | Future Focus |\n",
     "|-----------------|--------------|---------------|\n",
-    "| **Java Fundamentals** | Learned and practiced core syntax, object-oriented principles, and debugging techniques essential for the AP Exam. | Deepen understanding through backend and AI integrations. |\n",
-    "| **AI Usage** | Developed better prompting strategies and learned to critically evaluate AI-generated code. | Continue refining prompts and automate validation in checkpoints. |\n",
-    "| **Teamwork** | Collaborated with peers to integrate different submodules and debug shared systems. | Take on a larger coordination role and guide newer team members. |\n",
-    "| **Building a System** | Contributed to creating a functioning product that worked alongside other groups' codebases. | Learn backend connections to make systems more dynamic and data-driven. |"
+    "| **Java Fundamentals** | Learned and practiced core syntax, object-oriented principles, and debugging techniques essential for the AP Exam. | Created an easy-to-use checkpoint system with validation | Deepen understanding through backend and AI integrations. |\n",
+    "| **AI Usage** | Developed better prompting strategies and learned to critically evaluate AI-generated code. | Used AI to debug backend code and setup tools (jbang) | Continue refining prompts and automate validation in checkpoints. |\n",
+    "| **Teamwork** | Collaborated with peers to integrate different submodules and debug shared systems. | Talked to our base team as well as other teams to ensure issues were being taken care of | Take on a larger leadership role and coordinate better. |\n",
+    "| **Building a System** | Contributed to creating a functioning product that worked alongside other groups' codebases. | Built resources used throughout multiple parts of our section in the system yet stayed consistent to the goal | Learn backend connections to make systems more dynamic and data-driven. |"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "For our project, there are two major steps that I want to take. Firstly, I want to make checkpoints more accurate and engaging for the user by making the validation use AI to help grade rather than just checking for specific keywords, since I think that could really help users with learning the concepts. Secondly, I want to integrate some backend into the checkpoints so that the responses and validation cna be sent to perhaps the admins for more interaction with a teacher so that they can see the progress each student is making easier.\n",
+    "For our project, there are two major steps that I want to take. Firstly, I want to make checkpoints more accurate and engaging for the user by making the validation use AI to help grade rather than just checking for specific keywords, since I think that could really help users with learning the concepts. Secondly, I want to integrate some backend into the checkpoints so that the responses and validation can be sent to perhaps the admins for more interaction with a teacher so that they can see the progress each student is making easier.\n",
     "\n",
     "That ties into the thing I want to learn next well. I didn't get much experience with both AI and Backend throughout this tri, and both are things that I percieve to be extremely useful and want to learn to use and create. "
    ]
@@ -78,7 +78,15 @@
     "\n",
     "I was somewhat surprised by the format, as usually people are able to walk around to whatever station they wanted, but during the CSSE shift, a large crowd was being directed from station to station, which threw me off a little bit. However, that didn't really happen during our shift, which was nice.\n",
     "\n",
-    "While we were presenting, though we didn't get a lot of people, we were able to present to some parents and other people we knew who ended up liking our project, which felt extremely satisfying. I'm glad I was able to go and experience that. "
+    "While we were presenting, though we didn't get a lot of people, we were able to present to some parents and other people we knew who ended up liking our project, which felt extremely satisfying. I'm glad I was able to go and experience that. \n",
+    "\n",
+    "### Learnings\n",
+    "\n",
+    "*Purpose* - People usually think that the project is 'very cool' yet are still somewhat confused about what it can be used for and who would use it. To clear this confusion, our presentations should more clearly state the purpose and describe things such as use cases and user stories. \n",
+    "\n",
+    "*User Interaction* - If given the time, allow spectators to interact themselves with the page to allow for more understanding of how it can be used as well as more connection to the actual page.\n",
+    "\n",
+    "*Styling* - The people we pressented to left us with a sort of common theme. While they enjoyed the vision we had and the functionality of our page, we recieved feedback about the consistency of our submodules (mainly the styling). Because we have a couple of themes going on, it might throw off the overall connection between each submodule."
    ]
   },
   {
@@ -90,9 +98,22 @@
     "\n",
     "![Commits (23)](../images/Analytics.png \"Commits\")\n",
     "\n",
-    "While I didn't have the most commits, I did have a substantial amount and made an impact on my team's progress. I made the 3rd submodule of our team's overall frontend module and I think I was able to create something worthwile.\n",
+    "Many of these 23 commits came from sprint 3. While making them, I tried my best to create iterative commits that each added a small yet important piece to the page so as not to overload any one commit with a heap of information. In doing so, I was able to design the page in a way that ensured no errors would be found later on.\n",
     "\n",
     "[My Work](https://pages.opencodingsociety.com/cs-portfolio-quest/frontend/submodule_3/) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a697d3e",
+   "metadata": {},
+   "source": [
+    "## Biggest Challenges\n",
+    "\n",
+    "**Teamwork** - For a while in this first trimester, our team's collaboration was quite rocky. However, after some motivation (a .55) we worked out many of our problems and started to plan and delegate tasks properly. While we are in no way perfect, we have definitely improved a lot as a team.\n",
+    "\n",
+    "**Communication** - There were definitely some big issues involving communicating. Me and others were not informing others of what we had gotten done and what we needed to get done, which ended up in a lack of work being split among people and then a lack of work being done. This is still a problem we face today. However, I have taken steps to improve. I try to make thorough issues for planning or task delegation and other things like that and encourage my teammates to update those when they finish their tasks. I also try to make sure that our team is communicating and telling each other what we have to do. \n",
+    "\n"
    ]
   }
  ],
