--- a/_notebooks/homework/2025-10-12-1.13-homeworkGrinders.ipynb
+++ b/_notebooks/homework/2025-10-12-1.13-homeworkGrinders.ipynb
@@ -22,11 +22,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "4fa4bd60",
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -97,11 +93,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "87b5929f",
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -164,9 +156,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.5)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "java (JJava/j!)",
+   "language": "java",
+   "name": "jbang-jjava"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,7 +167,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "java",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.5"
