updated link on college panel

--- a/_notebooks/2025-12-16-college_panel.ipynb
+++ b/_notebooks/2025-12-16-college_panel.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "## Proof\n",
     "\n",
-    "https://github.com/kush1434/initiators/issues/31"
+    "[Link to Issue with Photos](https://github.com/kush1434/initiators/issues/31)"
    ]
   }
  ],
