update to 2024 frq 2

--- a/_notebooks/2026-01-21-FRQ_2_2024_HW.ipynb
+++ b/_notebooks/2026-01-21-FRQ_2_2024_HW.ipynb
@@ -28,6 +28,16 @@
    "metadata": {},
    "source": [
     "```java\n",
+    "\n",
+    "/*\n",
+    "*Creates and keeps track of a game between two teams\n",
+    "*Gameplay:\n",
+    "*- Teams take turns scoring points\n",
+    "*- If teams score no points, it becomes the other team's turn to score\n",
+    "*- Team 1 is always the starting team\n",
+    "*\n",
+    "*Scoreboard stores the team names, the active team, and the scores of each team\n",
+    "*/\n",
     "class Scoreboard {\n",
     "    private String team1Name;\n",
     "    private String team2Name;\n",
@@ -35,6 +45,11 @@
     "    private Integer team1Score;\n",
     "    private Integer team2Score;\n",
     "    \n",
+    "    /*\n",
+    "    *Constructor of each game\n",
+    "    *2 parameters, one for each team name\n",
+    "    *Both parameters are strings\n",
+    "    */ \n",
     "    public Scoreboard(String team1, String team2) {\n",
     "        team1Name = team1;\n",
     "        team2Name = team2;\n",
@@ -43,6 +58,17 @@
     "        team2Score = 0;\n",
     "    }\n",
     "    \n",
+    "    /*\n",
+    "    *recordPlay updates variables when a team makes a play\n",
+    "    *\n",
+    "    * If pointsScored is 0:\n",
+    "    * - swaps active team\n",
+    "    *   - checks which team is active\n",
+    "    *   - changes activeTeam to the other team\n",
+    "    * \n",
+    "    * If pointsScored is greater than 0:\n",
+    "    * - adds point total to active team\n",
+    "    */ \n",
     "    public void recordPlay(Integer pointsScored) {\n",
     "        if (pointsScored == 0) {\n",
     "            if (activeTeam.equals(team1Name)) {\n",
@@ -62,6 +88,10 @@
     "        }\n",
     "    }\n",
     "    \n",
+    "    /*\n",
+    "    *Returns a string with both team's scores and the active team\n",
+    "    *The format is team1Score-team2Score-activeTeam\n",
+    "    */\n",
     "    public String getScore() {\n",
     "        return team1Score + \"-\" + team2Score + \"-\" + activeTeam;\n",
     "    }\n",
@@ -119,6 +149,33 @@
     "## Proof of Success\n",
     "\n",
     "![Proof of Success]({{site.baseurl}}/images/2024_FRQ_2_Proof.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b726020e",
+   "metadata": {},
+   "source": [
+    "## Code Explanation\n",
+    "\n",
+    "**Scoreboard Class** \\\n",
+    "Defined initial variables necessary (team names, active team, team scores).\n",
+    "\n",
+    "\n",
+    "**Scoreboard Constructor** \\\n",
+    "Basic constructor that has team names as parameters, constructs scoreboard with team names, active team, and team scores.\n",
+    "\n",
+    "\n",
+    "**recordPlay Method** \\\n",
+    "Checks if points scored == 0, if they are then checks for which team is active and sets the other one to be active. If points scored aren't 0, adds points scored to active team.\n",
+    "\n",
+    "\n",
+    "**getScores Method** \\\n",
+    "Returns a string containing each team's scores and the active team.\n",
+    "\n",
+    "\n",
+    "**Main Class and Method** \\\n",
+    "Constructs scoreboards and runs tests to ensure each part works according to requirements."
    ]
   },
   {
